MerpAssistant funcionando  character sheet y login con mail

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,13 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.isBrowserView {
+    overflow-y: auto !important;
+  }
+
+ html {
+  font-family: roboto !important;
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 60% !important;
+} 
