--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,12 +5,15 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content>
+  <ion-content >
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
     </ion-list>
+      <div>
+        <button menuClose ion-item (click)="logout()">LOGOUT</button>
+      </div>
   </ion-content>
 
 </ion-menu>
