--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,11 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+        <ion-avatar col-2>
+           <img [src]="profilePic"> 
+        </ion-avatar>
     </ion-toolbar>
+
   </ion-header>
 
   <ion-content >
